subnets.tf
resource "aws_subnet" "public" {
  vpc_id = "${aws_vpc.vpn.id}"
  cidr_block = "10.0.1.0/24"
  map_public_ip_on_launch = true

  tags {
    Name = "Public"
  }
}
